--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -2,8 +2,8 @@
 
 <head>
 	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-	<script src="nui://esx_scoreboard/html/listener.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="nui://esx_scoreboard/html/style.css">
+	<script src="nui://vrp_scoreboard/html/listener.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="nui://vrp_scoreboard/html/style.css">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
 				<p style="color:#5ea1e0;"> 👮🏻 <span id="police">0</span> </p>
 				<p style="color:yellow;"> 🚕 <span id="taxi">0</span> </p>
 				<p style="color:grey;"> 🔧 <span id="mechanic">0</span> </p>
-				<p style="color:lightblue;"> 🚗 <span id="cardealer">0</span> </p>
-				<p style="color:#58ce93;"> 🏘️ <span id="estate">0</span> </p>
+				<p style="color:lightblue;"> 💼 <span id="advokat">0</span> </p>
+				<!--<p style="color:#58ce93;"> 🏘️ <span id="estate">0</span> </p>-->
 			</div>
 		</div>
 
@@ -25,9 +25,11 @@
 				<tr class="heading">
 					<th>Name</th>
 					<th>ID</th>
+					<th>Job</th>
 					<th>Ping</th>
 					<th>Name</th>
 					<th>ID</th>
+					<th>Job</th>
 					<th>Ping</th>
 				</tr>
 			</table>
